# los-estimator

./: .gitignore  .readthedocs.yaml  DOCSTRING_ANALYSIS.md  MANIFEST.in  README.md  README.rst  REFACTORING_SUMMARY.md  TODO.md  all_configurations.py  class_diagram.puml  comparison_data_loader.py  default_config.toml  docu.md  fitting.puml  gnerate_figure2.py  los_estimator.html  packages.list  paper_draft.md  plantuml_script.txt  pyproject.toml  requirements.txt  run_analysis.py  setup.py  teeemp.py  test_package.py  test_refactored_package.py  todo_copilot.txt  visualize_metrics.py  work_on_animation.py
comparison_data/: window_data_long.pkl
data/: hosp_ag.csv
docs/source/: api.rst  conf.py  index.rst
docs/source/_autosummary/: los_estimator.rst
docs/source/apiref/: api.rst  cli.rst  config.rst  core.rst  data.rst  evaluation.rst  fitting.rst  visualization.rst
docs/source/development/: contributing.rst
docs/source/usage/: _key_configs.rst  cli_usage.rst  input.rst  output_format.rst  quickstart.rst  real_data.rst
examples/: generate_synthetic_data.py  integration_example.py  synthetic_example.py  synthetic_example.toml  synthetic_icu_kernel.csv
los-estimator/: .gitignore
los-estimator/01_create_los_profiles/: .gitignore  binning.py
los-estimator/01_create_los_profiles/aachen/: bin_los_aachen.py
los-estimator/01_create_los_profiles/asic/: bin_los_asic.py
los-estimator/01_create_los_profiles/berlin/: bin_los_berlin.py  bin_los_berlin_mortality.py
los-estimator/02_fit_los_distributions/: convole_los.py  fit_los_generate_artifacts.py
los-estimator/03_los_deconvolution/: .gitignore  combine_video.py  compartmental_model.py  convolutional_model.py  core.py  dataprep.py  fit_deconvolution.py  fit_deconvolution_age_groups.py  fit_deconvolution_alt_classes.py  fit_deconvolution_from_admissions.py  fit_deconvolution_functions.py  fit_deconvolution_orig.py  fit_deconvolution_produce_fitting_test_results.py  fit_deconvolution_visualizations.py  generate_kernel_example.py  high_vizzz.py  load_ag.py  los_fitter.py  los_fitter2.py  profiler.py  utils.py
los-estimator/data/: VOC_VOI_Tabelle.xlsx
los-estimator/data/prepare_hospitalizations/: process_hospitalizations.py
los_estimator/: __init__.py  __main__.py  cli.py  default_config.toml  estimation_run.py  overwrite_config.toml
los_estimator/cli/: __init__.py  __main__.py
los_estimator/config/: __init__.py  data_config.py  model_config.py  output_config.py
los_estimator/core/: __init__.py  data_classes.py  estimator.py
los_estimator/data/: __init__.py  dataprep.py
los_estimator/data/deprecated/: cases.csv
los_estimator/data/dynamic/: sample_los.csv  sample_los_fit_values.csv
los_estimator/data/preprocessing/: __init__.py
los_estimator/evaluation/: __init__.py
los_estimator/fitting/: __init__.py  deconvolution.py  distributions.py  errors.py  fit_results.py  los_fitter.py  multi_series_fitter.py  sentinel_distro.py
los_estimator/utils/: __init__.py  comparison.py  deconvolution_utils.py  file_utils.py  helpers.py
los_estimator/visualization/: __init__.py  animators.py  base.py  context.py  deconvolution_plots.py  input_visualizer.py  metrics.py  plots.py
los_estimator_new/: REFACTORING_SUMMARY.md  VISUALIZATION_INTEGRATION_SUMMARY.md  demo_plotting.py  requirements.txt  test_comprehensive_visualization.py  test_visualizations.py
los_estimator_new/examples/: basic_usage.py  integration_example.py
source/: conf.py
tests/: test_config.toml  test_los_estimator_integration.py
util/: all_configurations.py  comparison_data_loader.py
(+14 files in other folders)
